@@ -1,0 +1,116 @@
+// $Id$
+// The global features file contains the default feature settings.
+// By default, if a feature isn't listed here then it is enabled.
+// If it is listed, then the value assigned to the feature is interpreted
+// as a boolean value.  You really shouldn't have to edit this file except
+// to change the defaults.  If you want to override these values you can do
+// one of two things.
+//
+// 1) Create a default.features in this directory with the features you
+//    want enabled or disabled.
+// 2) Create a feature file anywhere you like with the features you want and
+//    use the -feature_file option to specify where it is located.
+//
+// Feature definitions from this file are always overwritten by -features
+// command option of mwc.pl.
+//
+// This file is somewhat akin to the platform_macros.GNU file in that build
+// settings can be set here.
+
+automake = 1
+
+// Enable these by default.
+acexml        = 1
+ace_svcconf   = 1
+ace_token     = 1
+
+// By default we disable these.
+ace_for_tao   = 0
+ssl           = 1
+qos           = 0
+rapi          = 0
+repo          = 0
+minimum_corba = 0
+java          = 1
+zlib          = 1
+zzip          = 1
+ipv6          = 0
+mfc           = 0
+rpc           = 0
+sctp 	      = 0
+boost         = 1
+dummy_label   = 0
+cidl          = 0
+wince         = 0
+uses_wchar    = 0
+ziparchive    = 0
+negotiate_codesets  = 0
+versioned_namespace = 0
+vcl           = 0
+stl           = 1
+xerces3       = 0
+
+// Features for various GUI libraries
+
+// Some of features are switched on because they are also controlled
+// by higher level features eg. gl is 1 because it is necessary for fl,
+// but if someone turns on fl, we may assume gl is available. This way makefile
+// generation is simplified. Moreover all internal ACE features like ace_qtreactor
+// and tao_qtresource are also turn on, because we want to build every component
+// related with qt if qt is provided. It is proposed to not remove
+// switched on features from global.features just because features are available
+// by default. This file is also a kind of ACE capabilities documentation, hence
+// it is better to enumerate here all features recognized by ACE.
+
+// 1 - wxWindows (wxWidgets) libraries are avalaible
+wxWindows     = 1
+// 1 - Motif (Lestif) libraries are avalaible
+motif         = 1
+// 1 - Athena widgets libraries are avalaible
+athena        = 1
+// 1 - X11 libraries are avalaible
+x11           = 1
+// 1 - X Toolkit libraries are avalaible
+xt            = 1
+// 1 - Tk libraries are avalaible
+tk            = 1
+// 1 - Fast Light toolkit libraries are avalaible (assume lowercase h in header files)
+fl            = 1
+// 1 - Qt libraries are avalaible
+qt            = 1
+// 1 - OpenGL libraries are avalaible
+gl            = 1
+
+// Features for ACE support for various GUI libraries
+// Use QtReactor
+ace_qtreactor    = 1
+// Use XtReactor
+ace_xtreactor    = 1
+// Use TkReactor
+ace_tkreactor    = 1
+// Use FlReactor
+ace_flreactor    = 1
+
+// Features for TAO support for various GUI libraries
+// Use QtResources for TAO
+tao_qtresource    = 1
+// Use XtResources for TAO
+tao_xtresource    = 1
+// Use TkResources for TAO
+tao_tkresource    = 1
+// Use FlResources for TAO
+tao_flresource    = 1
+
+//Use the ZIP_Wrapper feature for when using the ZIP wrapper classes
+ZIP_Wrapper = 0
+
+// Feature for CORBA subsets
+corba_e_compact = 0
+corba_e_micro   = 0
+
+// Option to disable iiop
+tao_no_iiop = 0
+
+// Option to enable the linking of the TAO_CodecFactory library
+// whenever TAO is linked in
+link_codecfactory = 0
