@@ -1,3 +1,14 @@
+Sun Oct  4 23:09:12 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>
+
+        * run_tests.pl:
+
+          Avoid differences based on the $MPC_ROOT value.
+
+        * tests/more_workspaces/additional_options.txt:
+        * tests/more_workspaces/config/ace.features:
+
+          Added a feature file so that the test results do not rely on ACE.
+
 Thu Sep 10 13:36:02 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>
 
         * expected/more_circular_dependencies/*:
